# Tashkeel

./: .gitignore  Cargo.toml  LICENSE  README.md  main.rs
model_converter/: .gitignore  convert.py  demo.py  onnx.py  output.txt  requirements.txt
training/: requirements.txt  train.py  vocabulary.py
training/datasets/: tashkeela.py  textfile_dataset.py
training/datasets/transforms/: diacritics.py
training/utils/: diacritics.py
