[package]
name = "Tashkeel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ort = "1.14"
wasm-bindgen = "0.2"
serde = "1.0"
serde_json = "1.0"
ndarray = "0.15"

[[bin]]
name = "Tashkeel"
path = "main.rs"
